# anubis-mcp-server-ubuntu

./: .env.dev.example  .env.example  .gitignore  README.md  _FEATURE.md  install.sh  neuralnexus-mcp.sh  pyproject.toml  requirements.dev.txt  requirements.txt
scripts/: dev.sh  install.sh  lib.sh  stop.sh  stop_server.sh  uninstall.sh
src/: __init__.py
src/client/: _.ipynb  client.py
src/daemon/: __init__.py  __main__.py  config.py  registrar.py  relay.py  setup.py  tunnel.py
src/server/: __init__.py  app.py  settings.py
tests/: test_config.py  test_server_settings.py
